[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lawink-mcp"
version = "0.1.1"
description = "Korean Legal Ontology & Case-Law MCP for Claude Desktop (LaWink)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ntriq", email = "engineering@ntriq.co.kr" }]
license = { text = "MIT" }
keywords = ["mcp", "legal", "korean-law", "ontology", "claude"]
dependencies = [
    "httpx>=0.25.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
lawink-mcp = "lawink_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lawink_mcp"]

[tool.ruff]
line-length = 100
